--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@sienar/react-ui-mui",
-	"version": "0.1.0",
+	"version": "0.2.0-alpha.1",
 	"description": "A React UI library based on MUI for use with Sienar plugins",
 	"type": "module",
 	"main": "dist/sienar-react-ui-mui.js",
