--- a/package.json
+++ b/package.json
@@ -13,24 +13,26 @@
 	"scripts": {
 		"build": "tsc -b && vite build"
 	},
-	"devDependencies": {
+	"dependencies": {
 		"@emotion/react": "11.13.3",
 		"@emotion/styled": "11.13.0",
 		"@mui/icons-material": "6.1.1",
 		"@mui/material": "6.1.1",
-		"@mui/types": "7.2.18",
 		"@mui/x-data-grid": "7.22.1",
 		"@mui/x-date-pickers": "7.22.1",
 		"@sienar/react-utils": "^0.1.0",
-		"@types/node": "22.5.5",
-		"@types/react": "18.3.1",
-		"@types/react-dom": "18.3.1",
-		"@vitejs/plugin-react": "4.3.1",
 		"dayjs": "1.11.13",
 		"notistack": "3.0.1",
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
-		"react-router-dom": "6.26.2",
+		"react-router-dom": "6.26.2"
+	},
+	"devDependencies": {
+		"@mui/types": "7.2.18",
+		"@types/node": "22.5.5",
+		"@types/react": "18.3.1",
+		"@types/react-dom": "18.3.1",
+		"@vitejs/plugin-react": "4.3.1",
 		"typescript": "5.5.3",
 		"vite": "5.4.1",
 		"vite-plugin-dts": "4.3.0"
