--- a/package.json
+++ b/package.json
@@ -13,6 +13,22 @@
 	"scripts": {
 		"build": "tsc -b && vite build"
 	},
+	"peerDependencies": {
+		"@sienar/react-utils": "^0.1.0",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"react-router-dom": "^6.26.2",
+		"@types/react": "^18.3.1",
+		"@types/react-dom": "^18.3.1"
+	},
+	"peerDependenciesMeta": {
+		"@types/react": {
+			"optional": true
+		},
+		"@types/react-dom": {
+			"optional": true
+		}
+	},
 	"dependencies": {
 		"@emotion/react": "11.13.3",
 		"@emotion/styled": "11.13.0",
@@ -20,12 +36,8 @@
 		"@mui/material": "6.1.1",
 		"@mui/x-data-grid": "7.22.1",
 		"@mui/x-date-pickers": "7.22.1",
-		"@sienar/react-utils": "^0.1.0",
 		"dayjs": "1.11.13",
-		"notistack": "3.0.1",
-		"react": "18.3.1",
-		"react-dom": "18.3.1",
-		"react-router-dom": "6.26.2"
+		"notistack": "3.0.1"
 	},
 	"devDependencies": {
 		"@mui/types": "7.2.18",
